# llm-content-evaluator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
api/: index.py
core/: config.py  dependencies.py  evaluation.py
docs/: API_SCHEMA_DISAMBIGUATION_INTEGRATION.md  CHANGELOG.md  MASTER_GATES_OVERVIEW.md  PROMPT_INJECTION_FOR_EVALUATION.md  SCOPE_DISAMBIGUATION_GUIDE.md  SCOPE_INCONSISTENCIES_ANALYSIS.md
models/: schemas.py
schemes/: actuality_gate.yaml  actuality_part1.yaml  actuality_part2.yaml  actuality_part3.yaml  actuality_part4.yaml  actuality_part5.yaml  aktualitaet_new.yaml  aktualitaet_old.yaml  criminal_law_1a_gate.yaml  criminal_law_1a_part1.yaml  criminal_law_1a_part10.yaml  criminal_law_1a_part2.yaml  criminal_law_1a_part3.yaml  criminal_law_1a_part4.yaml  criminal_law_1a_part5.yaml  criminal_law_1a_part6.yaml  criminal_law_1a_part7.yaml  criminal_law_1a_part8.yaml  criminal_law_1a_part9.yaml  criminal_law_1b_gate.yaml  criminal_law_1b_part1.yaml  criminal_law_1b_part10.yaml  criminal_law_1b_part11.yaml  criminal_law_1b_part2.yaml  criminal_law_1b_part3.yaml  criminal_law_1b_part4.yaml  criminal_law_1b_part5.yaml  criminal_law_1b_part6.yaml  criminal_law_1b_part7.yaml  criminal_law_1b_part8.yaml  criminal_law_1b_part9.yaml  criminal_law_gate.yaml  data_privacy_4a_gate.yaml  data_privacy_4a_part1.yaml  data_privacy_4a_part10.yaml  data_privacy_4a_part2.yaml  data_privacy_4a_part3.yaml  data_privacy_4a_part4.yaml  data_privacy_4a_part5.yaml  data_privacy_4a_part6.yaml  (+146 more)
(+4 files in other folders)
