[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-eval-25"
version = "0.1.0"
description = "Minimal FastAPI for metadata classification and evaluation with multiple scale types"
authors = [{name = "Jan Schachtschabel", email = "jan.schachtschabel@example.com"}]
readme = "README.md"
requires-python = ">=3.13.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "openai>=1.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rdflib>=7.0.0",
    "cachetools>=5.3.0",
    "pyyaml>=6.0.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
